support OG protocol

--- a/index.html
+++ b/index.html
@@ -16,6 +16,12 @@ Sources of used media and stylesheets
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
 
+    <meta property="og:url" content="https://www.hoss-and-ginny-wedding.date/" />
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="川哲&君霓 婚禮邀請" />
+    <meta property="og:description" content="親愛的親朋好友，在這特別的一天 ，誠摯地邀請您，和我們一起於遙遠的銀河系慶祝我們的愛！" />
+    <meta property="og:image" content="https://cjhwong.github.io/wedding-invitation/assets/gallery/2023_6.webp.thumbnail" />
+
     <link
       rel="icon"
       href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>💍</text></svg>"
