update used resources

--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@ Sources of used media and stylesheets
 
 * Parallax scrolling: https://webflow.com/made-in-webflow/website/dutchman
 * Image gallery: https://codepen.io/pehaa/pen/zYxbxQg
-* Scroll reavel animation: https://codepen.io/blakeeric/pen/MWwGpmR
-* Countdown area background image: https://imgur.com/TBJC5Wr
+* Scroll reveal animation: https://codepen.io/blakeeric/pen/MWwGpmR
+* Scroll reveal background: https://wallpapercave.com/star-wars-9-wallpapers
 * Starry background effect styles: https://codepen.io/sarazond/pen/LYGbwj
+* Fill form button: https://codepen.io/aaroniker/pen/dyoMqma
 -->
 <!DOCTYPE html>
 <html>
