modify OG image and Gallery

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@ Sources of used media and stylesheets
     <meta property="og:type" content="website" />
     <meta property="og:title" content="川哲&君霓 婚禮邀請" />
     <meta property="og:description" content="親愛的親朋好友，在這特別的一天 ，誠摯地邀請您，和我們一起於遙遠的銀河系慶祝我們的愛！" />
-    <meta property="og:image" content="https://cjhwong.github.io/wedding-invitation/assets/gallery/2023_6.webp.thumbnail" />
+    <meta property="og:image" content="https://cjhwong.github.io/wedding-invitation/assets/cover.webp" />
 
     <link
       rel="icon"
